<resources>
    <string name="app_name">Lock it</string>

    <string name="summary_desc_add">添加一个新记录</string>
    <string name="summary_desc_setting">设置</string>
    <string name="summary_desc_app_icon">应用图标</string>

    <string name="details_tv_title">详细信息</string>

    <string name="add_record_tv_title">新建记录</string>
    <string name="add_record_et_hint_app_name">请输入应用名称</string>
    <string name="add_record_et_hint_app_url">请输入网址</string>
    <string name="add_record_ib_desc_qq">QQ登录</string>
    <string name="add_record_ib_desc_wechat">微信登陆</string>
    <string name="add_record_ib_desc_tele">手机号登录</string>
    <string name="add_record_ib_desc_weibo">微博登录</string>
    <string name="add_record_ib_desc_email">邮箱登录</string>
    <string name="add_record_ib_desc_alipay">支付宝登录</string>
    <string name="add_record_account_desc_note">备注</string>
    <string name="add_record_et_hint_uid">请输入账户ID</string>
    <string name="add_record_et_hint_username">请输入用户名</string>
    <string name="add_record_et_hint_password">请输入密码</string>
    <string name="add_record_et_hint_notes">在此输入备注…</string>
    <string name="add_record_desc_done">完成按钮</string>

    <string name="dialog_simple_input_hint">请在此输入</string>

    <string name="search_cb_hint">是否显示系统应用</string>

    <string name="copy">复制</string>
    <string name="retry">retry</string>
    <string name="lock">lock</string>
    <string name="search">搜索</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="select">选择</string>

    <string name="settings_header_1">密码与安全</string>
    <string name="icon">icon</string>
    <string name="setting_btn_password">设置密码</string>
    <string name="save">保存</string>
    <string name="info">详情</string>
</resources>