<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add.record.AddRecordFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/primary_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/add_record_tv_title" />

    <LinearLayout
        android:id="@+id/temp_layout_1"
        style="@style/cardView_linearlayout"
        android:layout_below="@id/textView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_et_add"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/appName"
                style="@style/et_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="0dp"
                android:layout_toStartOf="@id/selectApp"
                android:drawableStart="@drawable/ic_android_round_28"
                android:hint="@string/add_record_et_hint_app_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/selectApp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:contentDescription="@string/select"
                android:scaleType="centerInside"
                android:src="@drawable/ic_app_icon_24" />
        </RelativeLayout>


        <EditText
            android:id="@+id/appUrl"
            style="@style/et_add_account"
            android:layout_marginBottom="0dp"
            android:drawableStart="@drawable/ic_url_28"
            android:hint="@string/add_record_et_hint_app_url"
            android:importantForAutofill="no"
            android:inputType="textUri" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/temp_layout_2"
        style="@style/cardView_linearlayout"
        android:layout_below="@id/temp_layout_1">

        <EditText
            android:id="@+id/accountUid"
            style="@style/et_add_account"
            android:drawableStart="@drawable/ic_id_26"
            android:hint="@string/add_record_et_hint_uid"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/accountUsername"
            style="@style/et_add_account"
            android:drawableStart="@drawable/ic_user_26"
            android:hint="@string/add_record_et_hint_username"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/accountPassword"
            style="@style/et_add_account"
            android:layout_marginBottom="0dp"
            android:drawableStart="@drawable/ic_password_24"
            android:hint="@string/add_record_et_hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/temp_layout_3"
        style="@style/cardView_linearlayout"
        android:layout_below="@id/temp_layout_2"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageButton
            android:id="@+id/phone"
            style="@style/ib_login_way"
            android:contentDescription="@string/add_record_ib_desc_tele"
            android:src="@drawable/ic_phone_round_28" />

        <ImageButton
            android:id="@+id/email"
            style="@style/ib_login_way"
            android:contentDescription="@string/add_record_ib_desc_email"
            android:src="@drawable/ic_email_round_28" />

        <ImageButton
            android:id="@+id/qq"
            style="@style/ib_login_way"
            android:contentDescription="@string/add_record_ib_desc_qq"
            android:src="@drawable/ic_qq_28" />

        <ImageButton
            android:id="@+id/wechat"
            style="@style/ib_login_way"
            android:contentDescription="@string/add_record_ib_desc_wechat"
            android:src="@drawable/ic_wechat_28" />

        <ImageButton
            android:id="@+id/alipay"
            style="@style/ib_login_way"
            android:contentDescription="@string/add_record_ib_desc_alipay"
            android:src="@drawable/ic_alipay_28" />

        <ImageButton
            android:id="@+id/weibo"
            style="@style/ib_login_way"
            android:background="@null"
            android:contentDescription="@string/add_record_ib_desc_weibo"
            android:src="@drawable/ic_weibo_28" />

        <ImageButton
            android:id="@+id/addLoginWay"
            style="@style/ib_login_way"
            android:contentDescription="@string/add_record_ib_desc_weibo"
            android:src="@drawable/ic_add_round_28" />

    </LinearLayout>

    <LinearLayout
        style="@style/cardView_linearlayout"
        android:layout_height="match_parent"
        android:layout_below="@id/temp_layout_3"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="0dp">

        <EditText
            android:id="@+id/accountNotes"
            style="@style/et_add_account"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/add_record_et_hint_notes"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="16dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp"
        android:background="@null"
        android:contentDescription="@string/add_record_desc_done"
        android:src="@drawable/ic_done_32" />
</RelativeLayout>