<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.summary.SummaryFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            style="@style/mcv_circle"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            app:cardElevation="0dp">-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/summary_desc_setting"
            android:padding="8dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_settings_30" />
<!--        </com.google.android.material.card.MaterialCardView>-->

        <TextView
            style="@style/primary_title"
            android:layout_centerVertical="true"
            android:text="@string/app_name" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/summaryRecords"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/summaryAddRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/yellow"
        android:clickable="true"
        android:contentDescription="@string/summary_desc_add"
        android:focusable="true"
        android:src="@drawable/ic_add_24"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>